# Deal-Screener

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pipeline_q1_2026.csv  pyproject.toml  render.yaml  sample_deals.csv  sample_deals_minimal.csv
.github/workflows/: ci.yml
data/: example_thesis.json
data/mock/: companies.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/dealscreener/: cli.py  pipeline.py
src/dealscreener/agents/: synthesizer.py
src/dealscreener/api/: main.py
src/dealscreener/ingestion/: base.py  file_upload.py  sec_edgar.py
src/dealscreener/models/: domain.py  results.py
src/dealscreener/scoring/: engine.py
src/dealscreener/ui/: app.py
tests/: test_pipeline.py  test_scoring.py
