[project]
name = "dealscreener"
version = "0.1.0"
description = "Thesis-driven PE/M&A deal screening engine with deterministic scoring and LLM-assisted memo synthesis."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]
ui = ["streamlit>=1.33"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "black>=24.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# str+Enum is the idiomatic pattern for Pydantic-serialisable enums; StrEnum
# changes JSON behaviour, so we keep the explicit mixin and silence UP042.
ignore = ["UP042"]

[tool.black]
line-length = 100
